syntax = "proto3";

package pb;

option go_package = "./pb";

message CreateUserRequest {
    string firstName = 1;
    string lastName  = 2;
    string email  = 3;
    string password  = 4;
}

message CreateUserResponse {
    string id  = 1;
    string firstName  = 2;
    string lastName  = 3;
    string email  = 4;
    string createdAt  = 5;
    string updatedAt  = 6;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
}
